cmake_minimum_required(VERSION 3.17)
project(UNIRAIL C)
find_package(Threads)
find_library(wiringPi_LIB wiringPi)

set(CMAKE_C_STANDARD 99)

add_executable(RPI_Train RPI_Train/main_train.c)
FILE(GLOB RBC_FILES_SRC RBC/*.c )
FILE(GLOB RBC_LIBS_SRC RBC/libs/*.c )
FILE(GLOB RBC_LIBS_H RBC/libs/*.h )
FILE(GLOB UNIRAIL_SRC Libs_Unirail/*.c)
FILE(GLOB UNIRAIL_H Libs_Unirail/*.h)
add_executable(RBC ${RBC_FILES} ${UNIRAIL} ${RBC_LIBS} RBC/libs/aiguillage_queue.c RBC/libs/aiguillage_queue.h RBC/tests/test_aig_queue.c RBC/libs/config_parser.c RBC/libs/rbc_utils.h RBC/tests/testlog.c RBC/tests/test_parsing_train.c RBC/libs/rbc_can.c RBC/libs/log.h RBC/libs/rbc_utils.h)
add_executable(TEST_FILE RBC ${RBC_FILES_SRC} ${RBC_LIBS_SRC} ${UNIRAIL_SRC} ${RBC_LIBS_H} ${UNIRAIL_H} RBC/libs/train_comm.c)
add_executable(TEST_PARSER RBC/libs/log.h RBC/libs/log.c RBC/libs/rbc_utils.h RBC/libs/config_parser.c RBC/tests/test_parsing_train.c )
target_link_libraries(RBC pthread )